--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffprobe-wasm",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "ffprobe-like for browser and node, powered by WebAssembly",
   "repository": {
     "type": "git",
@@ -17,11 +17,22 @@
   ],
   "author": "Tomás Fox <tomas.c.fox@gmail.com>",
   "license": "MIT",
+  "exports": {
+    "node": "./node.mjs",
+    "types": "./ffprobe-worker.d.ts",
+    "default": "./browser.mjs"
+  },
+  "main": "./node.mjs",
+  "types": "./ffprobe-worker.d.ts",
+  "browser": "./browser.mjs",
   "scripts": {
-    "build": "tsc"
+    "build": "npm run tsc && npm run vite",
+    "tsc": "tsc",
+    "vite": "vite build"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vite": "^2.8.6"
   }
 }
