--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "outDir": "./dist",
-    "declaration": true
+    "declaration": true,
+    "sourceMap": true
   },
   "include": ["./src"]
 }
